--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -3,6 +3,8 @@ html {
   line-height: 1;
   font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback';
   user-select: none;
+  //这个属性只用于iOS (iPhone和iPad)。当你点击一个链接或者通过Javascript定义的可点击元素的时候，
+  //它就会出现一个半透明的灰色背景。要重设这个表现，你可以设置-webkit-tap-highlight-color为任何颜色。
   -webkit-tap-highlight-color: transparent;
   background: $color-background;
   color: $color-text;
