--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -21,3 +21,12 @@ html {
 .slide-enter-from, .slide-leave-to {
   transform: translate3d(100%, 0, 0)
 }
+
+@keyframes rotate {
+  0%{
+    transform: rotate(0);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
